FIX (Navbox) Small image width on mobile
Small images weren't going full width on mobile.

--- a/src/patterns/navbox/_navbox.scss
+++ b/src/patterns/navbox/_navbox.scss
@@ -114,10 +114,12 @@
         max-height: 100%;
 		overflow: hidden;
         position: absolute;
+        width: 100%;
   	}
 
   	.navbox-image img {
   		margin-top: -20%;
+        width: 100%;
   	}
 
   	.navbox-title {
